--- a/src/main/resources/templates/add-student-form.html
+++ b/src/main/resources/templates/add-student-form.html
@@ -2,15 +2,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Student Management System</title>
+    <title>Система управления задачами</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #B6C9C6;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
+            <a class="navbar-brand" th:href="@{/index}">Система управления задачами</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -19,11 +19,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/login}">Вход</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/register}">Регистрация</a>
                     </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -31,26 +32,26 @@
 
         <hr />
 
-        <h3>Add New Student</h3>
+        <h3>Добавление новой задачи</h3>
         <hr />
 
         <form th:action="@{/saveStudent}" th:object="${student}" method="POST">
 
-            <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name" />
+            <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Введите имя, пример - Иван" />
 
-            <input type="text" th:field="*{surname}" class="form-control col-4 mb-4" placeholder="Enter Surname" />
+            <input type="text" th:field="*{surname}" class="form-control col-4 mb-4" placeholder="Введите фамилию, пример - Иванов" />
 
             <input type="text" th:field="*{faculty}" class="form-control col-4 mb-4" placeholder="Enter Faculty" />
 
             <input type="text" th:field="*{age}" class="form-control col-4 mb-4" placeholder="Enter Age" />
 
-            <button type="submit" class="btn btn-primary col-2">Save</button>
+            <button type="submit" class="btn btn-primary col-2">Сохранить</button>
 
             <input type="hidden" th:field="*{id}" />
 
         </form>
         <hr />
-        <a th:href="@{/list}">Back to list</a>
+        <a th:href="@{/list}">К задачам</a>
     </div>
 
 </body>
