--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Student Management System</title>
+    <title>Система управления задачами</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="/icons/icon_app.ico">
 </head>
 
-<body>
+<body style="background-color: #B6C9C6;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
+            <a class="navbar-brand" th:href="@{/index}">Система управления задачами</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -20,18 +21,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/login}">Вход</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/register}">Регистрация</a>
                     </li>
+                </ul>
             </div>
         </div>
     </nav>
     <br /><br />
     <div class="container">
         <div class="row">
-            <h1 class="text-center"> Student Management System </h1>
+            <h1 class="text-center" style="font-weight: bold;">Система управления задачами</h1>
+            <h2 class="text-center" style="font-weight: bold;">Грамотное управление задачами в проекте!</h2>
+            <img src="/images/task_manage.png" alt="Управление задачами" class="img-fluid mx-auto d-block">
         </div>
     </div>
 </body>
