--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
-    <title>Student Management System</title>
+    <title>Система управления задачами</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #B6C9C6;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
+            <a class="navbar-brand" th:href="@{/index}">Система управления задачами</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/register}">Регистрация</a>
                     </li>
                 </ul>
             </div>
@@ -32,33 +32,33 @@
             <div class="col-md-6 offset-md-3">
 
                 <div th:if="${param.error}">
-                    <div class="alert alert-danger">Invalid Email or Password</div>
+                    <div class="alert alert-danger">Неправильная почта или пароль!</div>
                 </div>
                 <div th:if="${param.logout}">
-                    <div class="alert alert-success"> You have been logged out.</div>
+                    <div class="alert alert-success"> Вы вышли из системы!</div>
                 </div>
 
                 <div class="card">
                     <div class="card-header">
-                        <h2 class="text-center">Login Form</h2>
+                        <h2 class="text-center">Вход в систему</h2>
                     </div>
                     <div class="card-body">
                         <form method="post" role="form" th:action="@{/login}" class="form-horizontal">
                             <div class="form-group mb-3">
-                                <label class="control-label"> Email</label>
+                                <label class="control-label"> Почта</label>
                                 <input type="text" id="username" name="username" class="form-control"
                                     placeholder="Enter email address" />
                             </div>
 
                             <div class="form-group mb-3">
-                                <label class="control-label"> Password</label>
+                                <label class="control-label"> Пароль</label>
                                 <input type="password" id="password" name="password" class="form-control"
                                     placeholder="Enter password" />
                             </div>
                             <div class="form-group mb-3">
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                                <span> Not registered ?
-                                    <a th:href="@{/register}">Register/Signup here</a>
+                                <button type="submit" class="btn btn-primary">Войти</button>
+                                <span> Не зарегистрированы?
+                                    <a th:href="@{/register}">Регистрация</a>
                                 </span>
                             </div>
                         </form>
