--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Student Management System</title>
+    <title>Система управления задачами</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #B6C9C6;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
+            <a class="navbar-brand" th:href="@{/index}">Система управления задачами</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/login}">Вход</a>
                     </li>
                 </ul>
             </div>
@@ -31,17 +31,17 @@
         <div class="row col-md-8 offset-md-2">
             <div class="card">
                 <div class="card-header">
-                    <h2 class="text-center">Registration</h2>
+                    <h2 class="text-center">Регистрация</h2>
                 </div>
                 <div th:if="${param.success}">
                     <div class="alert alert-info">
-                        You have successfully registered our app!
+                        Вы успешно зарегистрировали в нашем приложении!
                     </div>
                 </div>
                 <div class="card-body">
                     <form method="post" role="form" th:action="@{/register/save}" th:object="${user}">
                         <div class="form-group mb-3">
-                            <label class="form-label">First Name</label>
+                            <label class="form-label">Имя пользователя</label>
                             <input class="form-control" id="firstName" name="firstName" placeholder="Enter first name"
                                 th:field="*{firstName}" type="text" />
                             <p th:errors="*{firstName}" class="text-danger" th:if="${#fields.hasErrors('firstName')}">
@@ -49,28 +49,28 @@
                         </div>
 
                         <div class="form-group mb-3">
-                            <label class="form-label">Last Name</label>
+                            <label class="form-label">Фамилия пользователя</label>
                             <input class="form-control" id="lastName" name="lastName" placeholder="Enter last name"
                                 th:field="*{lastName}" type="text" />
                             <p th:errors="*{lastName}" class="text-danger" th:if="${#fields.hasErrors('lastName')}"></p>
                         </div>
 
                         <div class="form-group mb-3">
-                            <label class="form-label">Email</label>
+                            <label class="form-label">Почта</label>
                             <input class="form-control" id="email" name="email" placeholder="Enter email address"
                                 th:field="*{email}" type="email" />
                             <p th:errors="*{email}" class="text-danger" th:if="${#fields.hasErrors('email')}"></p>
                         </div>
 
                         <div class="form-group mb-3">
-                            <label class="form-label">Password</label>
+                            <label class="form-label">Пароль</label>
                             <input class="form-control" id="password" name="password" placeholder="Enter password"
                                 th:field="*{password}" type="password" />
                             <p th:errors="*{password}" class="text-danger" th:if="${#fields.hasErrors('password')}"></p>
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-primary" type="submit">Register</button>
-                            <span>Already registered? <a th:href="@{/login}">Login here</a></span>
+                            <button class="btn btn-primary" type="submit">Зарегистрироваться</button>
+                            <span>Уже зарегистрированы? <a th:href="@{/login}">Войдите</a></span>
                         </div>
                     </form>
                 </div>
