--- a/src/main/resources/templates/list-students.html
+++ b/src/main/resources/templates/list-students.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="ru"
       xmlns:th="http://www.thymeleaf.org"
 >
 <head>
     <meta charset="UTF-8">
-    <title>Student Management System</title>
+    <title>Система управления задачами</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #B6C9C6;">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
+        <a class="navbar-brand" th:href="@{/index}">Система управления задачами</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/login}">Вход</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Регистрация</a>
                 </li>
             </ul>
         </div>
@@ -34,16 +34,17 @@
 <div class="container">
 
     <hr/>
-    <a th:href="@{/addStudentForm}" class="btn btn-primary">Add Student</a>
+    <a th:href="@{/addStudentForm}" class="btn btn-primary">Добавить задачу</a>
     <br/><br/>
     <table class="table table-bordered table-striped" id="studentTable">
 
-        <thead>
+        <thead class="table-dark">
         <tr>
-            <th>Name</th>
-            <th>Surname</th>
-            <th>Faculty</th>
-            <th>Age</th>
+            <th>Имя</th>
+            <th>Фамилия</th>
+            <th>Факультет</th>
+            <th>Возраст</th>
+            <th>Действие</th>
         </tr>
         </thead>
         <tbody>
@@ -53,9 +54,8 @@
             <td th:text="${student.faculty}" />
             <td th:text="${student.age}" />
             <td>
-                <a th:href="@{/showUpdateForm(studentId=${student.id})}" class="btn btn-info">Update</a>
-
-                <a th:href="@{/deleteStudent(studentId=${student.id})}" class="btn btn-danger ml-2">Delete</a>
+                <a th:href="@{/showUpdateForm(studentId=${student.id})}" class="btn btn-info">Обновить</a>
+                <a th:href="@{/deleteStudent(studentId=${student.id})}" class="btn btn-danger ml-2">Удалить</a>
             </td>
         </tr>
         </tbody>
@@ -70,7 +70,7 @@
         $("#studentTable").DataTable({
             'aoColumnDefs': [{
                 'bSortable': false,
-                'aTargets': [-1] /* 1st one, start by the right */
+                'aTargets': [-1]
             }]
         });
     })
