--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,14 +46,14 @@
                         <form method="post" role="form" th:action="@{/login}" class="form-horizontal">
                             <div class="form-group mb-3">
                                 <label class="control-label"> Почта</label>
-                                <input type="text" id="username" name="username" class="form-control"
-                                    placeholder="Enter email address" />
+                                <label for="username"></label><input type="text" id="username" name="username" class="form-control"
+                                                                     placeholder="Введите вашу почту" />
                             </div>
 
                             <div class="form-group mb-3">
                                 <label class="control-label"> Пароль</label>
-                                <input type="password" id="password" name="password" class="form-control"
-                                    placeholder="Enter password" />
+                                <label for="password"></label><input type="password" id="password" name="password" class="form-control"
+                                                                     placeholder="Введите ваш пароль" />
                             </div>
                             <div class="form-group mb-3">
                                 <button type="submit" class="btn btn-primary">Войти</button>
