--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
-    <title>Registration and Login System</title>
+    <title>Система управления задачами</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -11,7 +11,7 @@
 <body style="background-color: #B6C9C6;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
+            <a class="navbar-brand" th:href="@{/index}">Система управления задачами</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -20,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/logout}">Выход</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/list}">Students</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/list}">Задачи</a>
                     </li>
                 </ul>
 
@@ -32,14 +32,14 @@
     </nav>
     <div class="container">
         <div class="row col-md-10">
-            <h2>List of Registered Users</h2>
+            <h2>Список зарегистрированных пользователей</h2>
         </div>
         <table class="table table-bordered table-hover">
             <thead class="table-dark">
                 <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
+                    <th>Имя</th>
+                    <th>Фамилия</th>
+                    <th>Почта</th>
                 </tr>
             </thead>
             <tbody>
