--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Система управления задачами</title>
+    <title>СУЗ - Список пользователей системы</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -20,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/logout}">Выход</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/list}">Задачи</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/list}">Задачи</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/logout}">Выход</a>
                     </li>
                 </ul>
 
