--- a/src/main/resources/templates/add-animal-form.html
+++ b/src/main/resources/templates/add-animal-form.html
@@ -1,12 +1,10 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
     <title>СУЗ - Добавление новой задачи</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-
 <body style="background-color: #B6C9C6;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -28,36 +26,45 @@
             </div>
         </div>
     </nav>
+    <br><br />
     <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
 
-        <hr />
+                <div th:if="${param.error}">
+                    <div class="alert alert-danger">Неправильная почта или пароль!</div>
+                </div>
+                <div th:if="${param.logout}">
+                    <div class="alert alert-success"> Вы вышли из системы!</div>
+                </div>
 
-        <h3>Добавление новой задачи</h3>
-        <hr />
-
-        <form th:action="@{/saveAnimal}" th:object="${animal}" method="POST">
-
-            <label>
-                <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Введите имя, пример - Иван" />
-            </label>
-
-            <label>
-                <input type="text" th:field="*{species}" class="form-control col-4 mb-4" placeholder="Введите фамилию, пример - Иванов" />
-            </label>
-
-            <label>
-                <input type="text" th:field="*{age}" class="form-control col-4 mb-4" placeholder="Enter Age" />
-            </label>
-
-            <button type="submit" class="btn btn-primary col-2">Сохранить</button>
-
-            <input type="hidden" th:field="*{id}" />
-
-        </form>
-        <hr />
-        <a th:href="@{/list}">К питомцам</a>
+                <div class="card">
+                    <div class="card-header">
+                        <h2 class="text-center">Добавление нового питомца</h2>
+                    </div>
+                    <div class="card-body">
+                        <form th:action="@{/saveAnimal}" th:object="${animal}" method="POST">
+                            <div class="form-group mb-3">
+                                <label class="control-label">Имя питомца</label>
+                                <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Введите имя питомца" required />
+                            </div>
+                            <div class="form-group mb-3">
+                                <label class="control-label">Порода питомца</label>
+                                <input type="text" th:field="*{species}" class="form-control col-4 mb-4" placeholder="Введите породу питомца" required />
+                            </div>
+                            <div class="form-group mb-3">
+                                <label class="control-label">Возраст питомца</label>
+                                <input type="text" th:field="*{age}" class="form-control col-4 mb-4" placeholder="Введите возраст" required />
+                            </div>
+                            <div class="form-group mb-3">
+                                <button type="submit" class="btn btn-primary btn-md">Сохранить</button>
+                                <input type="hidden" th:field="*{id}" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
 </body>
-
 </html>
