--- a/src/main/resources/templates/add-animal-form.html
+++ b/src/main/resources/templates/add-animal-form.html
@@ -18,10 +18,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/login}">Вход</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/list}">Список питомцев</a>
                     </li>
+                </ul>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/register}">Регистрация</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/logout}">Выход</a>
                     </li>
                 </ul>
             </div>
@@ -59,6 +61,7 @@
                             </div>
                             <div class="form-group mb-3">
                                 <button type="submit" class="btn btn-primary btn-md">Сохранить</button>
+                                <a class="btn btn-secondary btn-md" th:href="@{/list}">Назад</a>
                                 <input type="hidden" th:field="*{id}" />
                             </div>
                         </form>
