--- a/src/main/resources/templates/list-animals.html
+++ b/src/main/resources/templates/list-animals.html
@@ -4,12 +4,20 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>СРДП - Список задач</title>
+    <title>СРДП - Список питомцев</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="/icons/icon-pets.ico">
+    <style>
+        table {
+            background-color: #b7ffb5;
+        }
+        th, td {
+            background-color: #b7ffb5;
+        }
+    </style>
 </head>
 
 <body style="background-color: #B6C9C6;">
@@ -23,18 +31,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/login}">Вход</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/users}">Список пользователей</a>
                 </li>
+            </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Регистрация</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Выход</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 <div class="container">
-
-    <hr/>
+    <div class="row col-md-10">
+        <h2 class="text-center">Список домашних питомцев</h2>
+    </div>
     <a th:href="@{/addAnimalForm}" class="btn btn-primary">Добавить питомца</a>
     <br/><br/>
     <table class="table table-bordered table-striped" id="animalTable">
